git-svn-id: http://svn.vdombox.ru/flextools/trunk@1034 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/Builder.mxml
+++ b/PowerPack/v.01/Builder.mxml
@@ -123,7 +123,7 @@
 	       	
 	       	private function errorHandler(event:ErrorEvent):void
 	       	{
-	       		Alert.show("Error!!!");
+	       		Alert.show("Application Error!!!");
 	       	}
 	       	private function exitApplicationHandler(event:Event):void
 	       	{
@@ -162,6 +162,10 @@
 	        private function completeLangHandler(event:Event):void
 	        {
 	            langXML = XML(event.target.data);
+	            
+	            GraphArrow.langXML = langXML;
+	            GraphNode.langXML = langXML;
+	            GraphCanvas.langXML = langXML;
 	            
         	    Alert.yesLabel = langXML.yes;
                 Alert.noLabel = langXML.no;	 
