--- a/IDE/Vdom/Vdom.mxml
+++ b/IDE/Vdom/Vdom.mxml
@@ -48,40 +48,44 @@
 			width="100%" height="100%" verticalScrollPolicy="off"
 			show="{placeCanvas.selectedChild=mainCanvas}">
 			
-			<mx:HBox  
-				top="0" bottom="0" width="100%" 
-				horizontalAlign="left" horizontalGap="5" verticalAlign="middle" verticalScrollPolicy="off">
+			<controls:ControlPanel 
+				top="0" bottom="0" width="100%" horizontalAlign="left" horizontalGap="5" verticalAlign="middle">
 				
-				<controls:ActionPanel panelName="{languages.language.(@label == 'main_new')}" />
+				<controls:ActionButton styleName="newsButton"
+					label="{languages.language.(@label == 'main_new')}"
+					labelPlacement="bottom"/>
 				
-				<controls:ActionPanel panelName="{languages.language.(@label == 'main_steps')}"/>
+				<controls:ActionButton styleName="newsButton"
+					label="{languages.language.(@label == 'main_steps')}"
+					labelPlacement="bottom"/>
 
-				<controls:ActionPanel panelName="{languages.language.(@label == 'main_search')}"  width="250">
+				<controls:ActionPanel panelName="{languages.language.(@label == 'main_search')}"
+					width="250" height="86" dropShadowEnabled="false">
 				
 					<mx:HBox width="100%">
-						<mx:Button label="Find" height="61"/>
+						<mx:Button label="Find" height="50"/>
 						<mx:VBox width="100%" horizontalAlign="right">
 							<mx:TextInput height="20"/>
 							<mx:ComboBox height="20"></mx:ComboBox>
-							<mx:Button label="Go"/>
+							<mx:Button label="Go" height="20"/>
 						</mx:VBox>
 					</mx:HBox>
 					
 				</controls:ActionPanel>
 				
 				<controls:ApplicationPanel id="applicationListContainer"
-					
+					dropShadowEnabled="false"
 					panelName="{languages.language.(@label == 'main_applist')}" 
 					dataProvider="{listApplication.Application}"
 					applicationChange="appChangedHandler(event)"
-					/>
+					height="86"/>
 				
 				<controls:ActionPanel
 					
 					panelName="{languages.language.(@label == 'main_appinfo')}"
-					width="100" visible="false"/>
+					visible="true" height="86" dropShadowEnabled="false"/>
 				
-			</mx:HBox>
+			</controls:ControlPanel>
 		</mx:Canvas>
 		<mx:Canvas id="editorTab"
 			label="{languages.language.(@label == 'editor_title')}" width="100%" height="100%"  
@@ -121,18 +125,13 @@
 					click="{placeCanvas.selectedChild=analyseCanv}"/>
 				
 				<controls:ActionButton styleName="statisticsButton" 
-					label="{'asdasda'+languages.language.(@label == 'editor_statistics')}"
+					label="{languages.language.(@label == 'editor_statistics')}"
 					labelPlacement="bottom"/>
 				
 				<controls:ActionButton styleName="eventsButton"
 					label="{languages.language.(@label == 'editor_events')}"
 					labelPlacement="bottom"/>
 					
-				
-				<controls:ActionButton styleName="newsButton"
-					label="{languages.language.(@label == 'editor_news')}"
-					labelPlacement="bottom"/>
-
 			</controls:ControlPanel>
 		</mx:Canvas>
 		<mx:Canvas id="multilinTab"
